--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
 
-  <!-- Hello web developer friend! Welcome to my code... -->
-  <title>HTML5 Pong - Benjamin Rosati</title>
-  <meta name="description" content="A recreation of Pong using browser-based technologies">
+  <!-- Hello woodland critter friends! Welcome to our architecture... -->
+  <title>Basecamp</title>
+  <meta name="description" content="A desription to this campground">
 
   <!-- Are desktops just not cool anymore? -->
   <meta name="viewport" content="width=device-width">
@@ -25,7 +25,7 @@
   <!-- I exist... seriously -->
   <link rel="author" href="/humans.txt" />
 
-  <!-- I'm gonna shiv you so hard -->
+  <!-- The universe is ours -->
   <script src="js/libs/modernizr.js"></script>
 </head>
 <body>
@@ -47,10 +47,10 @@
   <!--- And our star guest tonight is... -->
   <script type="text/javascript" src="js/libs/easel/easeljs-0.5.0.min.js"></script>
 
-  <!--- Fashionable late as always is Greensock -->
+  <!--- Fashionable late as always is... -->
   <script type="text/javascript" src="js/libs/greensock/plugins/CSSPlugin.min.js"></script>
 
-  <!--- And what a ladies man he is! Look at all these girls he brought! -->
+  <!--- And what a ladies man he is! Look at all the ladies he brought! -->
   <script type="text/javascript" src="js/libs/greensock/easing/EasePack.min.js"></script>
   <script type="text/javascript" src="js/libs/greensock/TweenLite.min.js"></script>
 
